[package]
name = "pyrkyv"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrkyv"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.0", features = ["py-clone"] }
bytemuck = "1.17.0"
byteorder = "1.5.0"
dyn-clone = "1.0.17"
fastrand = "2.2.0"
hex = "0.4.3"
itertools = "0.13.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
numpy = "0.28.0"
paste = "1.0.15"
raw_sync = "0.1.5"
shared_memory = "0.12.4"
strum = "0.28.0"
strum_macros = "0.28.0"
rkyv = "0.8.15"
rkyv-with = "0.1.2"