[project]
name = "pyrkyv"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

dependencies = [
    "msgpack>=1.0,<2.0",
]

[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "python.pyrkyv._pyrkyv"
bindings = "pyo3"